--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,53 @@
 
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+food at DuckDuckGo;https://duckduckgo.com/?q=food&t=h_
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+web browsers at DuckDuckGo;https://duckduckgo.com/?q=web+browsers&t=h_
+weather in atlanta at DuckDuckGo;https://duckduckgo.com/?q=weather+in+atlanta
+web browsers at DuckDuckGo;https://duckduckgo.com/?q=web+browsers&t=h_&ia=web
+weather in atlanta at DuckDuckGo;https://duckduckgo.com/?q=weather+in+atlanta&ia=weather
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+x22 report at DuckDuckGo;https://duckduckgo.com/?q=x22+report&t=h_
+;https://duckduckgo.com/l/?uddg=https%3A%2F%2Fx22report.com%2F
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+x22 report at DuckDuckGo;https://duckduckgo.com/?q=x22+report&t=h_
+;https://duckduckgo.com/l/?uddg=https%3A%2F%2Fx22report.com%2Fall-x22-reports%2F
+All X22 Reports;https://x22report.com/all-x22-reports/
+X22;https://x22report.com/
+All X22 Reports;https://x22report.com/all-x22-reports/
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+Ep. 2429;https://x22report.com/first-arrest-will-verify-action-confirm-future-direction-durham-ds-will-fight-back-ep-2429/
+X22;https://x22report.com/
+Ep. 2429;https://x22report.com/first-arrest-will-verify-action-confirm-future-direction-durham-ds-will-fight-back-ep-2429/
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+this is a test at DuckDuckGo;https://duckduckgo.com/?q=this+is+a+test&t=h_
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+browser speedtest at DuckDuckGo;https://duckduckgo.com/?q=browser+speedtest&t=h_
+printer page test at DuckDuckGo;https://duckduckgo.com/?q=printer+page+test&t=h_
+;https://duckduckgo.com/l/?uddg=https%3A%2F%2Fwww.printatestpage.com%2F
+Print a Test Page Online - A Simple Printer Test Page;https://www.printatestpage.com/
+browser speedtest at DuckDuckGo;https://duckduckgo.com/?q=browser+speedtest&t=h_&ia=web
+Print a Test Page Online - A Simple Printer Test Page;https://www.printatestpage.com/
+browser speedtest at DuckDuckGo;https://duckduckgo.com/?q=browser+speedtest&t=h_&ia=web
+Bing;http://www.bing.com/
+Yandex;https://yandex.com/
+Google;https://www.google.com/?gws_rd=ssl
+track this at DuckDuckGo;https://duckduckgo.com/?q=track+this
+;https://duckduckgo.com/l/?uddg=https%3A%2F%2Fwww.trackthis.link%2F
+Track This | A new kind of Incognito;https://www.trackthis.link/
+Vivaldi Browser – Fast, private browser with unique features;https://vivaldi.com/
+Download Vivaldi | Vivaldi Browser;https://vivaldi.com/download/
+Frame load interrupted by policy change;https://downloads.vivaldi.com/stable/vivaldi-stable_3.7.2218.45-1_amd64.deb
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+Freedom definition - Brave Search;https://search.brave.com/search?q=Freedom+definition
+weather - Brave Search;https://search.brave.com/search?q=weather&source=web
+what is my ip - Brave Search;https://search.brave.com/search?q=what+is+my+ip&source=web
+What Is My IP Address - See Your Public Address - IPv4 & IPv6;https://whatismyipaddress.com/
+what is my ip - Brave Search;https://search.brave.com/search?q=what+is+my+ip&source=web
+what is my browser - Brave Search;https://search.brave.com/search?q=what+is+my+browser&source=web
+What browser? My browser? Is my browser out of date?;https://www.whatismybrowser.com/
+DuckDuckGo — Privacy, simplified.;https://duckduckgo.com/
+Freedom definition - Brave Search;https://search.brave.com/search?q=Freedom+definition
